--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0px;
     padding: 0px;
-    /* font: inherit; */
 }
 
 @font-face {
@@ -10,7 +9,6 @@
 }
 
 .all-body {
-    /* background-color: aqua; */
     width: 100%;
     height: 100vh;
     display: flex;
@@ -87,7 +85,6 @@ form div .form-control {
 .line {
     margin: 20px;
     height: 1px;
-    /* color: black; */
     background-color: grey;
     width: 100%;
 }
@@ -127,19 +124,18 @@ a {
 }
 
 nav {
-    padding: 30px;
     display: flex;
     flex-direction: column;
-    height: 93%;
+    height: 100vh;
     justify-content: space-between;
-    /* background-color: #0095f6; */
     position: fixed;
+    border-right: gray solid 1px;
+    /* padding-bottom: 40px; */
 }
 
 .d-flex {
     display: flex;
-    height: 100%;
-    /* background-color: #0095f6; */
+    height: 100vh;
 }
 
 nav div ul {
@@ -147,18 +143,28 @@ nav div ul {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    /* justify-content: space-around; */
+}
+
+nav div:nth-child(2){
+    margin-bottom: 30px;
 }
 
 .logo {
-    margin: 20px;
+    padding-top: 30px;
+    padding-left: 30px;
+    margin: 20px;                                              
     margin-top: 0px;
     font-family: "insta-font";
 }
 
 ul li {
     list-style: none;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     gap: 20px;
 }
@@ -171,11 +177,10 @@ li a {
 .d-flex main {
     width: 100%;
     padding: 20px;
-    /* background-color: #0095f6; */
 }
 
 .home-page {
-    margin-left: 15%;
+    margin-left: 18%;
     display: flex;
     justify-content: space-between;
 }
@@ -189,6 +194,7 @@ li a {
 }
 
 .content-right {
+    padding-left: 50px;
     position: relative;
 }
 
@@ -202,8 +208,10 @@ li a {
 .story-place {
     display: flex;
     gap: 15px;
+    /* justify-content: center; */
+    align-items: center;
     margin-bottom: 20px;
-    width: 890px;
+    width: 820px;
     overflow-x: scroll;
     scroll-behavior: smooth;
 }
@@ -223,7 +231,6 @@ li a {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    /* align-items: center; */
     margin-top: 20px;
     padding-bottom: 20px;
     border-bottom: black solid 1px;
@@ -242,8 +249,7 @@ li a {
 .post {
     display: flex;
     justify-content: center;
-    border: black solid 1px;
-    /* margin-bottom: 20px; */
+    border: white solid 1px;
 }
 
 .caption-post .row:nth-child(1){
@@ -257,8 +263,10 @@ li a {
     display: flex;
     margin: 5px;
     gap: 20px;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
+    font-size: 30px;
+    margin-top: 20px;
 }
 
 .caption-post .row:nth-child(3) input {
@@ -267,6 +275,8 @@ li a {
     padding-left: 10px;
     padding-right: 10px;
     border: none;
+    background-color: black;
+    color: white;
 }
 
 .post img {
@@ -276,14 +286,14 @@ li a {
 .next-story {
     position: absolute;
     top: 120px;
-    right: 25%;
+    right: 430px;
     font-size: 30px;
 }
 
 .before-story {
     position: absolute;
     top: 120px;
-    left: 17%;
+    left: 300px;
     font-size: 30px;
 }
 
@@ -293,14 +303,193 @@ li a {
 
 .img-circle {
     height: 60px;
-    border-radius: 30px;
+    border-radius: 35px;
+}
+
+.dark-mode{
+    background-color: black;
+    color: white;
+}
+
+.dark-mode a {
+    color: #0095f6;
+}
+
+.dark-mode ul li a {
+    color: white;
+}
+
+.dark-mode ul li:hover{
+    background-color: rgba(255, 255, 255, 0.286);
+    border-radius: 5px;
+}
+
+body {
+    background-color: black;
+}
+
+.have-story {
+    border: white solid 5px;
+}
+
+a:hover {
+    color: white;
+}
+
+.logo-2 h1{
+    display: none;
 }
 
 
-/* Media Query for Tablets */
+.logo-hidden {
+    display: none;
+}
+
+
+.search-place {
+    position: fixed;
+    background-color: black;
+    height: 100vh;
+    width: 500px;
+    margin-left: 85px;
+    display: flex;
+    align-items: center;
+    border-left: gray solid 1px;
+    border-right: gray solid 1px;
+}
+
+.search-place .search {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.search-place .prifle-card {
+    margin-left: 30px;
+    margin-right: 30px;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: #0095f6; */
+}
+
+.search-place .search .row:nth-child(1) {
+    margin-left: 30px;
+}
+
+.search-place .search input {
+    height: 50px;
+    width: 450px;
+    padding-left: 20px;
+    background-color: black;
+    border: none;
+    border-bottom: white solid 1px;
+    color: white;
+}
+
+.searching {
+    color: white;
+    position: fixed;
+    top: 135px;
+    left: 500px;
+}
+
+
+.hidden {
+    display: none;
+}
+
+.center-rells {
+    /* background-color: #0095f6; */
+    width: 100%;
+}
+
+.block {
+    display: block;
+}
+
+.card-reels {
+    margin-bottom: 40px;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+.card-reels img {
+    height: 600px;
+}
+
+.card-reels ul li {
+    margin: 0px;
+    padding: 0px;
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+@media only screen and (max-width: 1440px){
+    .next-story {
+        right: 350px;
+    }
+
+    .before-story {
+        left: 270px;
+    }
+}
+
+@media only screen and (max-width: 1024px){
+    .next-story {
+        right: 70px;
+    }
+
+    .before-story {
+        left: 150px;
+    }
+
+    .content-right {
+        display: none;
+    }
+
+    ul li a {
+        display: none;
+    }
+
+    .logo h1{
+        display: none;
+    }
+
+    .logo-2 h1{
+        display: block;
+    }
+
+    .home-page {
+        margin-left: 14%;
+    } 
+}
+
+
+
 @media only screen and (max-width: 768px) {
     .left-login img{
         display: none;
+    }
+
+    nav {
+        height: 100%;
+    }
+
+    .next-story {
+        right: 30px;
+    }
+
+    .story-place {
+        width: 600px;
+        margin-left: 20px;
+    }
+
+    .before-story {
+        left: 150px;
     }
 
     .login {
@@ -313,6 +502,24 @@ li a {
         width: 200px;
     }
 
+    .next-story {
+        display: none;
+    }
+    
+    .story-place {
+        width: 400px;
+        height: 70px;
+        margin-left: 90px;
+    }
+
+    .img-circle {
+        height: 50px;
+    }
+    
+    .before-story {
+        display: none;
+    }
+
     .right-login form h1 {
         margin-left: 23%;
         margin-top: 10px;
@@ -321,6 +528,34 @@ li a {
 
     .buttom a img {
         height: 40px;
+    }
+
+    ul li {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .logo {
+        margin-left:10px;
+    }
+
+    
+    .post-card {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 300px;
+        border-bottom: black solid 1px;
+    }
+
+    .home-page {
+        margin-left: 10px;
+        padding-left: 0px;
+        display: block;
+    }
+
+    .post-list {
+        margin-left: 130px;
     }
     
 }
