--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,11 @@
     <title>Instagram Clone / Login Page</title>
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.css">
+    <style>
+        body{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="all-body">
