--- a/templates/test.html
+++ b/templates/test.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.css">
+    <style>
+        body div input {
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+        <input type="text">
+        <i class="fas fa-search"></i>
+    </div>
 </body>
 </html>
